test/test_data/benchmark_http_client_test_envoy.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: {{ ip_loopback_address }}
      port_value: 0
static_resources:
  clusters:
    name: cluster_0
    hosts:
      socket_address:
        address: {{ ip_loopback_address }}
        port_value: 0
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: {{ ip_loopback_address }}
          port_value: 0
      filter_chains:
      - filters:
        - name: envoy.http_connection_manager
          config: 
            generate_request_id: false
            codec_type: auto
            stat_prefix: ingress_http
            route_config:
              name: local_route 
              virtual_hosts:
              - name: service
                domains:
                - "*"
                routes:
                - match:
                    prefix: /lorem-ipsum-status-200
                  direct_response:
                    status: 200
                    body:
                      filename: {{ test_rundir }}/test/test_data/lorem_ipsum.txt
                - match:
                    prefix: /404
                  direct_response:
                    status: 404
                    body:
                      filename: {{ test_rundir }}/test/test_data/lorem_ipsum.txt
            http_filters:
            - name: envoy.router
              config:
                dynamic_stats: false
