test/test_data/benchmark_https_client_test_envoy.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: $server_ip
      port_value: $admin_port
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: $server_ip
          port_value: $server_port
      filter_chains:
      - filters:
        - name: envoy.http_connection_manager
          config: 
            generate_request_id: false
            codec_type: auto
            stat_prefix: ingress_http
            route_config:
              name: local_route 
              virtual_hosts:
              - name: service
                domains:
                - "*"
                routes:
                - match:
                    prefix: /lorem-ipsum-status-200
                  direct_response:
                    status: 200
                    body:
                      filename: $test_rundir/test/test_data/lorem_ipsum.txt
                - match:
                    prefix: /404
                  direct_response:
                    status: 404
                    body:
                      filename: $test_rundir/test/test_data/lorem_ipsum.txt
            http_filters:
            - name: envoy.router
              config:
                dynamic_stats: false
        tls_context:
          common_tls_context:
            tls_certificates:
              - certificate_chain:
                  filename: $ssl_cert_path
                private_key:
                  filename: $ssl_key_path
